--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tauri + React</title>
-    <link rel="stylesheet" href="/prism.css" />
+    <link rel="stylesheet" href="/prism-tomorrow.css" />
   </head>
 
   <body>
